--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -51,7 +51,9 @@
                         <a class="collapsible-header">Agen Pulsa<i class="material-icons right">arrow_drop_down</i></a>
                         <div class="collapsible-body">
                             <ul>
-                                <li><a href="/reload">Isi Pulsa/Paket</a></li>
+                                {{#compare session.privilege "1" operator="=="}}
+                                    <li><a href="/reload">Isi Pulsa/Paket</a></li>
+                                {{/compare}}
                                 <li><a href="/sentitems">Pesan Keluar</a></li>
                                 <li><a href="/pending">Pesan Pending</a></li>
                                 <li><a href="/inbox">Pesan Masuk</a></li>
@@ -62,8 +64,10 @@
                     </li>
                 </ul>
             </li>
+            {{#compare session.privilege "1" operator="=="}}
+                <li><a href="/user">User Management</a></li>
+            {{/compare}}
             <li><a href="/logout">Logout ({{session.name}})</a></li>
-            <li><a href="/user">User Management</a></li>
             <li class="divider"></li>
             <li class="blue darken-3"><a href="/inventory">Portal Inventory</a></li>
         </ul>
