- add user on report

--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -20,6 +20,7 @@
                     <th width="9%" >Status</th>
                     <th width="9%" >Proses</th>
                     <th width="7%" >Untuk</th>
+                    <th width="10%" >User</th>
                 </tr>
                 <tr class="hide-on-large-only">
                     <th>Tanggal</th>
@@ -32,6 +33,7 @@
                     <th>Status</th>
                     <th>Proses</th>
                     <th>Untuk</th>
+                    <th>User</th>
                 </tr>
             </thead>
             <tbody>
@@ -66,6 +68,9 @@
                     </td>
                     <td>
                         {{parseUntuk untuk}}
+                    </td>
+                    <td>
+                        {{user}}
                     </td>
                 </tr>
             {{/each}}
