- optimize report page

--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -2,7 +2,7 @@
     Reports - Portal Pulsa Cermati
 {{/section}}
 {{error}}
-<div class="container">
+<div class="almost-full">
     <div class="col s12">
         <span class="font-40">Laporan Pemakaian Saldo</span>
     </div>
@@ -10,14 +10,14 @@
         <table class="bordered">
             <thead>
                 <tr class="hide-on-med-and-down">
-                    <th width="15%" >Tanggal</th>
+                    <th width="10%" >Tanggal</th>
                     <th width="9%" >Trunk</th>
-                    <th width="15%" >No. Trunk</th>
-                    <th width="9%" >Transaksi</th>
-                    <th width="9%" >Harga</th>
-                    <th width="9%" >Saldo Awal</th>
-                    <th width="9%" >Saldo Akhir</th>
-                    <th width="9%" >Status</th>
+                    <th width="10%" >No. Trunk</th>
+                    <th width="7%" >Transaksi</th>
+                    <th width="7%" >Harga</th>
+                    <th width="7%" >Saldo Awal</th>
+                    <th width="7%" >Saldo Akhir</th>
+                    <th width="7%" >Status</th>
                     <th width="9%" >Proses</th>
                     <th width="7%" >Untuk</th>
                     <th width="10%" >User</th>
