--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -69,6 +69,9 @@
                             Privilege
                         </th>
                         <th>
+                            Status
+                        </th>
+                        <th>
                             Action
                         </th>
                     </tr>
@@ -87,6 +90,9 @@
                             </td>
                             <td>
                                 <span>{{parsePrivilege privilege}}</span>
+                            </td>
+                            <td>
+                                <span>{{status}}</span>
                             </td>
                             <td>
                             {{#compare userPriv "1" operator="=="}}
