add number format helper

--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -52,13 +52,13 @@
                         {{trx}}
                     </td>
                     <td>
-                        {{harga}}
+                        {{numberFormat harga}}
                     </td>
                     <td>
-                        {{saldo_awal}}
+                        {{numberFormat saldo_awal}}
                     </td>
                     <td>
-                        {{saldo_akhir}}
+                        {{numberFormat saldo_akhir}}
                     </td>
                     <td>
                         {{status}}
