--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -84,5 +84,6 @@
 </body>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="/javascripts/materialize.js"></script>
+<script type="text/javascript" src="/javascripts/table2CSV.js"></script>
 <script type="text/javascript" src="/javascripts/portal.js"></script>
 </html>
